# atlas

./: .gitignore  CLAUDE.md  Makefile
backend/: pyproject.toml
backend/app/: __init__.py  auth.py  config.py  db.py  events.py  main.py
backend/app/engine/: context.py  engine.py  guards.py  mock.py  nodes.py  schemas.py  triggers.py
backend/app/files/: safe_path.py
backend/app/hermes/: admin.py  client.py  factory.py  schemas.py
backend/app/migrations/: 001_core.sql  002_chat_threads.sql  003_workflows.sql
backend/app/notify/: email.py  telegram.py
backend/app/review/: service.py
backend/app/routers/: agents.py  approvals.py  events.py  files.py  hermes.py  review.py  system.py  workflows.py
backend/tests/: conftest.py  test_approvals.py  test_auth.py  test_backup_status.py  test_cron_routes.py  test_db.py  test_engine.py  test_events.py  test_files_api.py  test_hermes_admin.py  test_hermes_client.py  test_hermes_proxy.py  test_hermes_runs.py  test_killswitch.py  test_models_env_routes.py  test_nodes.py  test_notify.py  test_review.py  test_routers_hermes.py  test_runs_api.py  test_safe_path.py  test_sanity.py  test_security.py  test_static_spa.py  test_templating.py  test_triggers.py  test_workflow_crud.py
backend/tests/fixtures/: dashboard_index.html  hermes-admin-contract.md  hermes-contract.json  hermes-run-sample.txt  hermes-runs-contract.md
deploy/: Caddyfile.snippet  Dockerfile  backup.sh  docker-compose.yml  restore-runbook.md
docs/: ACCEPTANCE.md  EXECUTION_PLAYBOOK.md  MASTER_PLAN.md  PROGRESS.md  SECURITY.md
frontend/: eslint.config.js  (+3 more)
(+63 files in other folders)
