[project]
name = "atlas-control-backend"
version = "0.1.0"
description = "ATLAS Control backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosmtplib>=5.1.2",
    "aiosqlite>=0.22.1",
    "apscheduler<4",
    "argon2-cffi>=25.1.0",
    "fastapi>=0.115",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "pydantic-settings>=2.14.2",
    "python-frontmatter>=1.3.0",
    "python-multipart>=0.0.32",
    "sqlalchemy[asyncio]>=2.0",
    "sse-starlette>=3.4.5",
    "uvicorn[standard]>=0.50.0",
    "watchfiles>=1.2.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "respx>=0.23.1",
    "ruff>=0.15.20",
]
